added custom page margin

--- a/anw_summary.tex
+++ b/anw_summary.tex
@@ -5,6 +5,8 @@
 \usepackage{minted} % for code highlighting
 \usepackage{xcolor} % for own colors
 
+\usepackage[margin=4cm]{geometry} % custom page margin
+
 \definecolor{dcGrayLight}{gray}{0.95}
 \definecolor{dcOrange}{RGB}{255, 128, 0}
 \definecolor{dcGreen}{RGB}{0, 154, 23}
