--- a/anw_summary.tex
+++ b/anw_summary.tex
@@ -9,10 +9,29 @@
 
 \definecolor{dcGrayLight}{gray}{0.95}
 \definecolor{dcOrange}{RGB}{255, 128, 0}
-\definecolor{dcGreen}{RGB}{0, 154, 23}
-\definecolor{dcBlue}{RGB}{0, 68, 129}
-\definecolor{dcRed}{RGB}{161,0,14}
+\definecolor{dcGreen}{RGB}{117, 225, 102}
+\definecolor{dcBlue}{RGB}{99, 203, 255}
+\definecolor{dcRed}{RGB}{255,88,88}
 \definecolor{dcWhite}{RGB}{255, 255, 255}
+
+
+\newtcolorbox{definition}[1][]{
+    colframe=dcBlue,
+    coltitle = black,
+    title = \textbf{Definition}
+}
+
+\newtcolorbox{lemma}[1][]{
+    colframe=dcGreen,
+    coltitle = black,
+    title = \textbf{Lemma}
+}
+
+\newtcolorbox{satz}[1][]{
+    colframe=dcRed,
+    coltitle = black,
+    title = \textbf{#1}
+}
 
 \colorlet{dcRedLight}{red!5!white}
 
@@ -33,10 +52,24 @@
 \chapter{Template}
 \section{tcolorbox}
 
+\begin{definition}
+    Definition...
+\end{definition}
+
+\begin{lemma}
+    Lemma...
+\end{lemma}
+
+\begin{satz}[Satz von Danny]
+    Satz...
+\end{satz}
+
 \begin{tcolorbox}[colback=dcWhite,colframe=dcOrange,title=\textbf{My Heading}]
     This is a \textbf{tcolorbox}.
 \tcblower
     Here, you see the lower part of the box.
+
+\tcbsubtitle{subtitle}
 \end{tcolorbox}
 
 \section{minted}
@@ -66,25 +99,25 @@
 
 Wir erinnern uns an die Definition eines \textbf{zusammenhängenden} Graphen:
 
-\begin{tcolorbox}[colframe=dcBlue,title=Definition]
+\begin{definition}
     Ein Graph $G = (V,E)$ heisst \textbf{zusammenhängend}, wenn $\forall u,v \in V, u \neq v$ 
     ein Pfad von u nach v in $G$ existiert. \\
 
     $X$ heisst \textbf{u-v-Seperator}, wenn u und v in verschiedenen Zusammenhangskomponenten von
     $G[V \backslash X]$ liegen.
-\end{tcolorbox}
+\end{definition}
 \bigskip
 
 Diese Definition besagt zwar ob ein Graph zusammenhängend ist oder nicht, man kann aber nichts darüber sagen,
 wie stark ein Graph zusammenhängend ist. Dafür definieren wir sowohl Knoten- als auch Kantenzusammenhang:
 
-\begin{tcolorbox}[colframe=dcBlue,title=Definition]
+\begin{definition}
     Ein Graph $G = (V,E)$ heisst \textbf{k-zusammenhängend}, falls $|V| \geq k + 1$ und $\forall X \subseteq V$
     mit $|X| \geq k$ gilt: $G[V \backslash X]$ ist zusammenhängend. \\
 
     Ein Graph $G = (V,E)$ heisst \textbf{k-kanten-zusammenhängend}, falls $\forall X \subseteq E$
     mit $|X| \geq k$ gilt: $(V, E \backslash X)$ ist zusammenhängend.
-\end{tcolorbox}
+\end{definition}
 \bigskip
 
 Ein Graph der 3-zusammenhängend ist, besitzt keine Seperator der Grösse 2 und ist dadurch auch 2-zusammenhängend. \\
@@ -92,87 +125,87 @@ Ein Graph der 3-zusammenhängend ist, besitzt keine Seperator der Grösse 2 und 
 Anschaulich zu merken: Wie viele Knoten oder Kanten muss man mindestens entfernen, bis der Graph nicht mehr
 zusammenhängend ist.
 
-\begin{tcolorbox}[colframe=dcGreen,title=Es Gilt]
+\begin{lemma}
     Knoten-Zusammenhang $\leq$ Kanten-Zusammenhang $\leq$ minimaler Knotengrad
-\end{tcolorbox}
+\end{lemma}
 \bigskip
 
 Ein (teils schwer zu beweisender) Satz erlaubt uns, eine äquivalente Definition von Zusammenhang
 verwenden:
 
-\begin{tcolorbox}[colframe=dcRed,title=Satz von Menger]
+\begin{satz}[Satz von Menger]
     Sei $G = (V, E)$ ein Graph. Dann gilt:
     \begin{enumerate}
         \item $G$ ist k-zusammenhängend $\Leftrightarrow \forall u,v \in V, u \neq v$ gibt es mindestens k intern-knotendisjunkte u-v-Pfade.
         \item $G$ ist k-kanten-zusammenhängend $\Leftrightarrow \forall u,v \in V, u \neq v$ gibt es mindestens k intern-kantendisjunkte u-v-Pfade.
     \end{enumerate}
-\end{tcolorbox}
+\end{satz}
 \bigskip
 
 \section{Artikulationsknoten und Brücken}
 
-\begin{tcolorbox}[colframe=dcBlue,title=Definition]
+\begin{definition}
     Sei $G = (V,E)$ ein zusammenhängender Graph. Ein Knoten $v \in V$ heisst \textbf{Artikulationsknoten}
     (eng. cut vertex) genau dann wenn $G[V \backslash \{v\}]$ nicht zusammenhängend ist.
-\end{tcolorbox}
+\end{definition}
 
-\begin{tcolorbox}[colframe=dcBlue,title=Definition]
+\begin{definition}
     Sei $G = (V,E)$ ein zusammenhängender Graph. Eine Kante $e \in E$ heisst \textbf{Brücke}
     (eng. cut edge) genau dann wenn $G[E \backslash \{e\}]$ nicht zusammenhängend ist.
-\end{tcolorbox}
+\end{definition}
 
-\begin{tcolorbox}[colframe=dcGreen,title=Es Gilt]
+\begin{lemma}
     Sei $G = (V,E)$ ein zusammenhängender Graph. Ist $\{x,y\} \in E$ eine Brücke so gilt für $x$
     (und analog auch für $y$): \\
     $$deg(x) = 1 \text{    oder    } x \text{ ist ein Artikulationsknoten}$$
-\end{tcolorbox}
+\end{lemma}
 \bigskip
 
 Die Umkehrung ist hier aber nicht immer wahr!
 
-\begin{tcolorbox}[colframe=dcBlue,title=Definition]
+\begin{definition}
     Sei $G = (V,E)$. Wir definieren eine Äquivalenzrelation auf $E$ wie folgt:
     $$e \sim f: \Leftrightarrow e = f \text{  oder  } \exists \text{ Kreis durch } e \text{ und } f$$
-\end{tcolorbox}
+\end{definition}
 \bigskip
 
 Diese Äquivalenzklassen nennen wir auch \textbf{Blöcke}. Eine alternative Definition lautet wiefolgt:
 
-\begin{tcolorbox}[colframe=dcBlue,title=Definition]
+\begin{definition}
     Sei $G = (V,E)$ ein zusammenhängender Graph. Ein \textbf{Block} ist eine maximale Menge von Kanten, so
     dass je zwei dieser Kanten auf einem gemeinsamen Kreis liegen.
-\end{tcolorbox}
+\end{definition}
 \bigskip
 
 Merke: Ein Block ist ein Subgraph, der 2-zusammenhängend ist.
 
-\begin{tcolorbox}[colframe=dcGreen,title=Es Gilt]
+\begin{lemma}
     Zwei Blöcke schneiden sich - wenn überhaupt - immer in einem Artikulationsknoten.
-\end{tcolorbox}
+\end{lemma}
 \bigskip
 
 \section{Block-Graphen}
 
 Wir erinnern uns an die Definition von bipartiten Graphen.
 
-\begin{tcolorbox}[colframe=dcBlue,title=Definition]
+\begin{definition}
     Ein Graph ist \textbf{bipartit}, wenn sich die Knotenmenge in zwei disjunkte Mengen
     $A$ und $B$ zerlegen lässt, sodass Kanten von $G$ nur zwischen $A$ und $B$ verlaufen.
     Wir verwenden dafür folgende Notation:
     $$V = A \uplus B$$
-\end{tcolorbox}
+\end{definition}
 \bigskip
 
 Ein Block-Graph ist nun wiefolgt definitert:
 
-\begin{tcolorbox}[colframe=dcBlue,title=Definition]
+\begin{definition}
     Der Block-Graph von $G$ ist der bipartite Graph $T = (A \uplus B, E_T )$ mit
     \begin{itemize}
         \item $A =$ {Artikulationsknoten von $G$}
         \item $B =$ {Blöcke von $G$}
         \item $\forall a \in A , b \in B: \{a,b\} \in E_T \Leftrightarrow a$ inzident zu einer Kante in $b$
     \end{itemize}
-\end{tcolorbox}
+\end{definition}
 \bigskip
 
 \end{document}
