fixed critical flaw

--- a/anw_summary.tex
+++ b/anw_summary.tex
@@ -337,7 +337,7 @@ Ein Block-Graph ist nun wiefolgt definitert:
 \end{definition}
 \bigskip
 
-Eine solche Tour lässt sich in $\mathcal{O}(|E|)$ finden - der Algorithmus ("schneller und langsamer Läufer")
+Eine solche Tour lässt sich in $\mathcal{O}(|E|)$ finden - der Algorithmus (''schneller und langsamer Läufer'')
 lässt sich ungefähr wie folgt beschreiben:
 
 \begin{algorithm}
