--- a/anw_summary.tex
+++ b/anw_summary.tex
@@ -115,6 +115,7 @@
 \input{chapters/block_graphen.tex}
 \input{chapters/kreise.tex}
 \input{chapters/matching.tex}
+\input{chapters/faerbung.tex}
 
 
 % --------------------------
