--- a/anw_summary.tex
+++ b/anw_summary.tex
@@ -122,6 +122,7 @@
 %   Part 2.
 % --------------------------
 \part{Wahrscheinlichkeiten}
+\input{chapters/wahr_grundlagen.tex}
 \input{chapters/siebformel.tex}
 
 \end{document}
