--- a/anw_summary.tex
+++ b/anw_summary.tex
@@ -124,5 +124,6 @@
 \part{Wahrscheinlichkeiten}
 \input{chapters/wahr_grundlagen.tex}
 \input{chapters/siebformel.tex}
+\input{chapters/bedingte_wahrscheinlichkeiten.tex}
 
 \end{document}
