--- a/anw_summary.tex
+++ b/anw_summary.tex
@@ -125,5 +125,7 @@
 \input{chapters/wahr_grundlagen.tex}
 \input{chapters/siebformel.tex}
 \input{chapters/bedingte_wahrscheinlichkeiten.tex}
+\input{chapters/zufallsvariable.tex}
+\input{chapters/diskrete_verteilung.tex}
 
 \end{document}
